--- a/PowerShellComponent/PowerShellComponent.csproj
+++ b/PowerShellComponent/PowerShellComponent.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DistributionGroup.cs" />
     <Compile Include="ExchangeUser.cs" />
     <Compile Include="ManagementCommands.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
