--- a/PowerShellComponent/App.config
+++ b/PowerShellComponent/App.config
@@ -1,6 +1,6 @@
 ﻿<configuration>
   <appSettings>
-    <add key="domainController" value="adtest2008.thetoolbox.com"/>
-    <add key="database" value="mail2007.thetoolbox.com\First Storage Group\Mailbox Database"/>
+    <add key="domainController" value="ad2.talho.net"/>
+    <add key="database" value="exch-ms1.talho.net\First Storage Group\Mailbox Database"/>
   </appSettings>
 </configuration>
