Committing features for adding member to group, and setting OffLineAddressBook on NewExchangeUser and customAttribute1.

--- a/PowerShellComponent/App.config
+++ b/PowerShellComponent/App.config
@@ -1,14 +1,14 @@
-﻿<configuration>
+﻿<!--
+<configuration>
   <appSettings>
     <add key="domainController" value="ad3.talho.net"/>
     <add key="database" value="exch-ms1.talho.net\First Storage Group\Mailbox Database"/>
   </appSettings>
 </configuration>
-<!--
+-->
 <configuration>
   <appSettings>
     <add key="domainController" value="adtest2008.thetoolbox.com"/>
     <add key="database" value="mail2007.thetoolbox.com\First Storage Group\Mailbox Database"/>
   </appSettings>
 </configuration>
--->
